--- a/contactStyle.css
+++ b/contactStyle.css
@@ -1,11 +1,7 @@
 body{
     color: white;
 }
-.texts{
-    width: 40%;
-    overflow: none;
-    align-self: flex-end;
-}
+
 .topspace{
     width:100%;
     height: 60%;
@@ -20,25 +16,13 @@ iframe{
     height: 75px;
     background: rgba(0,0,0,0.3)
 }
-.textstart {
-    position: relative;
-    top: 2.5rem;
-}
-.backg{
+
+.bg{
     object-fit: contain;
     overflow: clip;
     min-width: 100%;
     min-height: 100%;
     transform: translate(-10px);
     position: fixed;
-}
-.v1sketch{
-    position: relative;
-    float: right;
-    right: 100px;
-    top: 100px;
-    width: 400px;
-    overflow: hidden ;
-    object-fit:scale-down;
-    border: 2px solid red;
+    z-index: -1;
 }
