--- a/templates/index.html
+++ b/templates/index.html
@@ -35,8 +35,8 @@
         
                     <div class="mySlides fade">
                       <div class="numbertext">3 / 3</div>
-                      <a href="../media/boing_boing.gif">
-                        <img src="../media/boing_boing.gif" style="width:100%" class="imgref">
+                      <a href="../media/Tavoru.png">
+                        <img src="../media/Tavoru.png" style="width:100%" class="imgref">
                       </a>
                     </div>
                 </div>
