--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="../styles/normalize.css">
 <div class="navbar">
-    <div class="navbarelement1 navitem"><a href="index.html" class="linker">Home</a></div>
-    <div class="navbarelement1 navitem"><a href="ticketing.html" class="linker">Ticketing</a></div>
-    <div class="navbarelement1 navitem"><a href="about.html" class="linker">About</a></div>
-    <div class="navbarelement2 navitem"><a href="contacts.html" class="linker">Contacts</a></div>
+    <div class="navbarelement1 navitem"><a href="index.html" class="linker" draggable="false">Home</a></div>
+    <div class="navbarelement1 navitem"><a href="ticketing.html" class="linker" draggable="false">Ticketing</a></div>
+    <div class="navbarelement1 navitem"><a href="about.html" class="linker" draggable="false">About</a></div>
+    <div class="navbarelement2 navitem"><a href="contacts.html" class="linker" draggable="false">Contacts</a></div>
 </div>
