--- a/templates/ticketing.html
+++ b/templates/ticketing.html
@@ -18,11 +18,11 @@
             <img class="image" src="../media/boing_boing.gif" draggable="false">
             <img class="image" src="../media/DotForHer.png" draggable="false">
             <img class="image" src="../media/Tavoru.png" draggable="false">
-            <img class="image" src="../media/DotForHer.png" draggable="false">
+            <img class="image" src="../media/sacabamtavpis.gif" draggable="false">
             <img class="image" src="../media/A4Tav.png" draggable="false">
             <img class="image" src="../media/DotForHer.png" draggable="false">
             <img class="image" src="../media/Raid_End_Jahn.png" draggable="false">
-            <img class="image" src="../media/DotForHer.png" draggable="false">
+            <img class="image" src="../media/sacabamtavpis.gif" draggable="false">
         </div>
         <script src="../scripts/imagetrack.js"></script>
         <button class="goPay">
