--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -11,10 +11,10 @@
 .container .flex-item{
     text-align: center;
     flex-grow: 1;
-    background-image: linear-gradient(to bottom right, red, yellow);
+    background-image: linear-gradient(to bottom right, rgb(213, 103, 0),rgb(33, 0, 115));
     border-radius: 25px;
     border: 3px solid white;
-    max-width: 350px;
+    max-width: 350px;   
 }
 .container a{
     justify-content: center;
@@ -25,7 +25,7 @@
     width: 100%;
     height: 100%;
     text-decoration: none;
-    color: black;
+    color: rgb(255, 255, 255);
 }
 .socialIcon{
     height: 100px;
@@ -34,6 +34,7 @@
 }
 h1{
     font-size: 3em;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .flex-item p{
     height: 100px;
@@ -41,7 +42,7 @@ h1{
     align-self: center;
 }
 .container p{
-    color: darkblue;
+    color: rgb(255, 255, 255);
 }
 .container .flex-item .sLink{
     color: rgb(181, 0, 0);
