--- a/styles/index.css
+++ b/styles/index.css
@@ -52,11 +52,11 @@ body .grid-container > .foot{
     font-weight: bold;
 }
 .foot img{
-    width: 5vw;
-    background-color: white;
-    border-radius: 50%;
+    width: 7.5vw;
     margin-left: 2vw;
-    border: 1px solid black;
+    object-fit: scale-down;
+    border-radius: 15px;
+    user-select: none;
 }
 .foot{
     background: linear-gradient(4deg, rgba(49, 145, 156, 0.5) 0%, rgba(49, 145, 156, 0.1) 100%);
@@ -164,5 +164,5 @@ body .grid-container > .foot{
 /* Main body */
 body{
     background-image: url("../media/TavernBgRender.png");
+    background-size: cover;
 }
-/* Layout PC fixes */
