--- a/styles/payment.css
+++ b/styles/payment.css
@@ -17,6 +17,7 @@
     justify-content: center;
     flex-flow: column;
     padding-bottom: 60px;
+    gap: 50px;
 }
 
 .container form{
@@ -84,8 +85,9 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    top: 0; left: 0;
-    background:linear-gradient(45deg, rgb(89, 43, 226), rgb(69,69,69));
+    top: 50px; left: 0;
+    background-image: url("../media/TavernBgRender.png");
+    background-size: cover;
     border-radius: 5px;
     backface-visibility: hidden;
     box-shadow: 0 15px 25px rgba(0,0,0,.2);
@@ -104,7 +106,9 @@
 .container .card-container .front .image img{
     height: 50px;
 }
-
+.container .card-container .front .image .tavicon{
+    height: 75px;
+}
 .container .card-container .front .card-number-box{
     padding:30px 0;
     font-size: 22px;
@@ -126,10 +130,11 @@
 /* Card back */
 .container .card-container .back{
     position: absolute;
-    top:0; left: 0;
+    top:50px; left: 0;
     height: 100%;
     width: 100%;
-    background:linear-gradient(45deg, rgb(89, 43, 226), rgb(69,69,69));
+    background-image: url("../media/DotForHer.png");
+    background-size: cover;
     border-radius: 5px;
     padding: 20px 0;
     text-align: right;
