--- a/styles/style.css
+++ b/styles/style.css
@@ -110,3 +110,21 @@ body{
         opacity: 1;
     }
 }
+.circle {
+    height: 24px;
+    width: 24px;
+    border-radius: 24px;
+    background-color: black;
+    position: fixed; 
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    z-index: 99999999; /* so that it stays on top of all other elements */
+  }
+a:hover,.goPay:hover{
+    cursor: url("../media/hovercursor.cur") 15 15, auto;
+}
+*{
+    user-select: none;
+    cursor: url("../media/tavcursor.cur") 5 20, auto;
+}
