--- a/styles/ticketing.css
+++ b/styles/ticketing.css
@@ -12,6 +12,7 @@ h1{
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
 }
 #image-track {
     display: flex;
@@ -19,9 +20,9 @@ h1{
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%); 
+    transform: translate(0, -50%); 
     user-select: none; /* -- Prevent image highlighting -- */
-    
+    pointer-events: none;
 }
 
 #image-track > .image {
@@ -42,7 +43,11 @@ button{
     border-radius: 15px 15px 15px 15px;
     border: 3px solid silver;
 }
-.goPay a{
+button:hover{
+    cursor: pointer;
+}
+.goPay{
     color: silver;
     text-decoration: none;
-}
+    font-size: max(16px,1vw)
+}   
